# ScriptoScope

./: .gitignore  CLAUDE.md  DEVELOPERS.md  README.md  orf_core.c  pyproject.toml  reproduce_issue.py  requirements.txt  scriptoscope.py  setup.py  test_tabs.py
devtools/: DEVTOOLDEVELOPMENTLOG.md  __main__.py  bench-orf-compare.sh  bench-orf.sh  bench_orf.py  bench_orf_compare.py  build-ape.sh  build_orf_core.py  run_tests.py  sitecustomize.py  watch.py
performance_docs/bench_orf/: CODE_TOUR.md
tests/: conftest.py  test_dna_sanity.py  test_prodigal.py  test_smoke.py  test_strand_detection.py
