[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "scriptoscope"
version = "0.5.0"
description = "TUI Transcriptome Browser"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.61.0",
    "biopython>=1.83",
    "pyhmmer>=0.10.0",
    "rich>=13.7.0",
]

[project.scripts]
scriptoscope = "scriptoscope:main"

[tool.setuptools]
py-modules = ["scriptoscope"]
