[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptoscope"
version = "0.6.0"
description = "TUI Transcriptome Browser"
requires-python = ">=3.10"
dependencies = [
    "textual>=8.2.2",
    "biopython>=1.87",
    "pyhmmer>=0.12.0",
    "rich>=14.3.3",
]

[project.scripts]
scriptoscope = "scriptoscope:main"

[tool.setuptools]
py-modules = ["scriptoscope"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
